--- a/README.html
+++ b/README.html
@@ -60,7 +60,7 @@
 <div class="out">predict action : </div>
    
 </div>
-    <script type="text/javascript" src="http://unpkg.com/brain.js"></script>
+    <script src="http://unpkg.com/brain.js"></script>
     <script type="text/javascript" >
 //начальная расстановка в шахматах
 
